# python-sdk

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AdvancedAugmentation.md  MONGODB_SETUP.md
docs/examples/cockroachdb/: README.md  main.py
docs/examples/mongodb/: README.md  (+1 more)
examples/agents/agno/: README.md  main.py  pyproject.toml
examples/clinical-exam-evaluator/: .env.example  README.md  clinical_exam.sqlite  main.py  pyproject.toml
examples/mongodb/: README.md
examples/neon/: README.md
examples/postgres/: README.md
examples/sqlite/: README.md
memori/: __init__.py  __main__.py  _cli.py  _config.py  _network.py  _search.py  _utils.py
memori/api/: _sign_up.py
memori/llm/: _base.py  _clients.py  _constants.py  _embeddings.py  _invoke.py  _iterable.py  _iterator.py  _providers.py  _registry.py  _streaming.py  _utils.py  _xai_wrappers.py
memori/memory/: _collector.py  _manager.py  _struct.py  _writer.py  recall.py
memori/storage/: __init__.py  _base.py  _builder.py  _connection.py  _manager.py  _registry.py  _router.py
tests/: test_config.py  test_init.py  test_network.py  test_search.py  test_utils.py
tests/database/: core.py  init_db.py
tests/examples/: test_sqlite_interactive.py
tests/llm/: test_llm_base.py  test_llm_clients.py  test_llm_embeddings.py  test_llm_registry.py
tests/memory/: test_memory_writer.py  test_recall.py
tests/storage/: test_async_queue_manager.py  test_connection_factory.py  test_storage_register.py  test_storage_registry.py
(+103 files in other folders)
